Beta version 1.0.1 release
- Security: HTTP -> HTTPS for all API endpoints
- Security: CORS restricted to therspshub.com only
- Security: Session token encrypted on disk (XOR)
- Security: HTTPS enforced in developer portal URL fields
- Security: Gson updated 2.2.4 -> 2.10.1
- Desktop shortcut created on first launch (avoids OneDrive trigger)
- Auto-update system with version.json check
- Custom RSPS HUB app icon (dark rounded square, blue accent)
- Inno Setup installer with no welcome page, silent shortcut creation
- Website mock launcher redesign (store view, animated cards)
- Favicon added to website
- Discord RPC working